--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "@tanstack/react-query": "^5.76.1",
     "apexcharts": "3.44.0",
     "axios": "^1.9.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
