--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "6.17.0",
     "react-spinners": "^0.17.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.29.1"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
