--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tanstack/react-query": "^5.76.1",
     "apexcharts": "3.44.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-zoom": "^2.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "prop-types": "15.8.1",
