--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-zoom": "^2.2.0",
+    "dayjs": "^1.11.18",
     "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "prop-types": "15.8.1",
