side bar issue solved

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "6.17.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "react-tooltip": "^5.29.1"
+    "react-tooltip": "^5.29.1",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "18.2.31",
